@@ -7,7 +7,7 @@
   released versions in the <a href="http://pypi.python.org/pypi/tox">Python
     Package Index</a>.</p>
 {% else %}
-<p>Current: <b><a href="{{pathto('announce/release-0.5')}}">{{ version }}</a></b>
+<p>Current: <b>{{ version }}</b>
 [<a href="{{ pathto('changelog') }}">Changes</a>]</p>
 <p>
 <a href="http://pypi.python.org/pypi/tox">tox on PyPI</a>
